--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Site Generator</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header1-0" style="background-image: url(assets/images/global-business-2000x1248.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header1-0" style="background-image: url(assets/images/global-business-2000x1248.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.7; background-color: rgb(0, 0, 0);"></div>
 
@@ -103,11 +103,11 @@
                 <div class="col-xs-12">
 
                     <div class="mbr-testimonial card mbr-testimonial-lg">
-                        <div class="card-block"><p><br></p><p>Hola! Mi nombre es <strong>Diego Alejandro</strong>, soy productor de la empresa <strong>Gráfica Creativa</strong>, la cual lleva en el mercado más de <strong>10</strong> <strong>años</strong>, con oficinas de diseño y desarrollo en la ciudad de <strong>Lanús</strong>. Contamos con maquinarias propias de máxima tecnología y calidad de impresión tanto en<strong> Offset</strong>, <strong>Digital</strong> y <strong>gran</strong> <strong>formato</strong> ubicados en <strong>CABA</strong>. Con el tiempo nos fuimos capacitando junto a nuestro grupo de trabajo e incorporamos a nuestra cartera de productos el servicio de <strong>Marketing</strong> <strong>Digital</strong> con lo cuál contamos con una estructura para desarrollar todo tipo de trabajo y campañas publicitarias que lleven a nuestros clientes al éxito.</p><p><br></p><p><strong>Nuestra política es la calidad y el mejor precio del mercado. Por lo cual superamos cualquier presupuesto.</strong></p></div>
+                        <div class="card-block"><p><br></p><p>Hola! Mi nombre es <strong>Gráfica Creativa</strong>, &nbsp;llevamos más de <strong>10</strong> <strong>años en el mercaod</strong>, con oficinas de diseño y desarrollo en la ciudad de <strong>Lanús</strong>. Contamos con maquinarias propias de máxima tecnología y calidad de impresión tanto en<strong> Offset</strong>, <strong>Digital</strong> y <strong>gran</strong> <strong>formato</strong> ubicados en <strong>CABA</strong>. Con el tiempo nos fuimos capacitando junto a nuestro grupo de trabajo e incorporamos a nuestra cartera de productos el servicio de <strong>Marketing</strong> <strong>Online</strong> con lo cuál contamos con una estructura para desarrollar todo tipo de trabajo y campañas publicitarias que lleven a nuestros clientes al éxito.</p><p><br></p><p><strong>Nuestra política es la calidad y el mejor precio del mercado. Por lo cual superamos cualquier presupuesto.</strong></p></div>
                         <div class="mbr-author card-footer">
-                            <div class="mbr-author-img"><img src="assets/images/descarga-1-160x160.png" class="img-circle"></div>
-                            <div class="mbr-author-name">Diego Alejandro</div>
-                            <small class="mbr-author-desc">Productor</small>
+                            <div class="mbr-author-img"><img src="assets/images/agencia-creativa-160x151.png" class="img-circle"></div>
+                            <div class="mbr-author-name">graficaCREATIVA</div>
+                            <small class="mbr-author-desc"></small>
                         </div>
                     </div>
                 </div>
@@ -208,7 +208,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="Contactanos">
 
-                        <input type="hidden" value="QdiOlw8HzQYeMG33CEcYfPRnNP0dGs6tBw3S6SeAkZABIv+7yEWSjH1UPRdakL/IlPmfpXeyrtOquo5c4ZxuwTJbdzH6MCz56gNS0s6vPdT2QIVEWhzDuBvqw13AoXNQ" data-form-email="true">
+                        <input type="hidden" value="ELa2hRswRiHFuH6QKmYZB6XtX3Np9fGMeNRegUdwPVPq/cnU5Y4K52AFbYIcMCO+bubdVdum4Mcnps5ujsO9SCLweXuJPBOUNreEPVwyi8V18g0+93zy4oRueA8axcrE" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
@@ -270,10 +270,10 @@
                 <div><img src="assets/images/descarga-128x128.png"></div>
             </div>
             <div class="mbr-footer-content col-xs-12 col-md-3">
-                <p><strong>Address</strong><br>Riobamba 40<br>Buenos Aires, Lanús Oeste</p>
+                <p><font color="#001730" face="Montserrat, sans-serif" size="3"><span style="letter-spacing: -1px; line-height: 20px;"><strong>Dirección</strong></span></font><br><font color="#001730" face="Montserrat, sans-serif" size="3"><span style="letter-spacing: -1px; line-height: 20px;"><strong><br></strong></span></font>Riobamba 40<br>Buenos Aires, Lanús Oeste</p>
             </div>
             <div class="mbr-footer-content col-xs-12 col-md-3">
-                <p><strong>Contacts</strong><br>
+                <p><strong>Contacto</strong><br>
 Email: g3graficacreativa@gmail.com<br>Teléfono: 4225 - 0008<br><br></p>
             </div>
             <div class="mbr-footer-content col-xs-12 col-md-3">
