--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
                     <div class="navbar-brand">
                         <a href="#top" class="navbar-logo"><img src="assets/images/descarga-128x128.png" alt="Mobirise"></a>
-                        <a class="navbar-caption" href="#top">graficaCREATIVA</a>
+                        <a class="navbar-caption" href="index.html">graficaCREATIVA</a>
                     </div>
 
                 </div>
@@ -103,7 +103,7 @@
                 <div class="col-xs-12">
 
                     <div class="mbr-testimonial card mbr-testimonial-lg">
-                        <div class="card-block"><p><br></p><p>Hola! Mi nombre es <strong>Gráfica Creativa</strong>, &nbsp;llevamos más de <strong>10</strong> <strong>años en el mercaod</strong>, con oficinas de diseño y desarrollo en la ciudad de <strong>Lanús</strong>. Contamos con maquinarias propias de máxima tecnología y calidad de impresión tanto en<strong> Offset</strong>, <strong>Digital</strong> y <strong>gran</strong> <strong>formato</strong> ubicados en <strong>CABA</strong>. Con el tiempo nos fuimos capacitando junto a nuestro grupo de trabajo e incorporamos a nuestra cartera de productos el servicio de <strong>Marketing</strong> <strong>Online</strong> con lo cuál contamos con una estructura para desarrollar todo tipo de trabajo y campañas publicitarias que lleven a nuestros clientes al éxito.</p><p><br></p><p><strong>Nuestra política es la calidad y el mejor precio del mercado. Por lo cual superamos cualquier presupuesto.</strong></p></div>
+                        <div class="card-block"><p><br></p><p>Hola! Somos&nbsp;<strong>Gráfica Creativa</strong>, &nbsp;llevamos más de <strong>10</strong> <strong>años en el mercado</strong>, con oficinas de diseño y desarrollo en la ciudad de <strong>Lanús</strong>. Contamos con maquinarias propias de máxima tecnología y calidad de impresión tanto en<strong> Offset</strong>, <strong>Digital</strong> y <strong>gran</strong> <strong>formato</strong> ubicados en <strong>CABA</strong>. Con el tiempo nos fuimos capacitando junto a nuestro grupo de trabajo e incorporamos a nuestra cartera de productos el servicio de <strong>Marketing</strong> <strong>Online</strong> con lo cuál contamos con una estructura para desarrollar todo tipo de trabajo y campañas publicitarias que lleven a nuestros clientes al éxito.</p><p><br></p><p><strong>Nuestra política es la calidad y el mejor precio del mercado. Por lo cual superamos cualquier presupuesto.</strong></p></div>
                         <div class="mbr-author card-footer">
                             <div class="mbr-author-img"><img src="assets/images/agencia-creativa-160x151.png" class="img-circle"></div>
                             <div class="mbr-author-name">graficaCREATIVA</div>
@@ -143,7 +143,7 @@
 
             <div class="mbr-table-md-up">
               <div class="mbr-table-cell col-md-4">
-                  <div class="text-xs-center"><a class="btn btn-success" href="#top">VER MÁS</a></div>
+                  <div class="text-xs-center"><a class="btn btn-success" href="grafica.html">VER MÁS</a></div>
               </div>
               <div class="mbr-table-cell mbr-right-padding-md-up col-md-8 text-xs-center text-md-left">
                   <h3 class="mbr-info-title mbr-section-title display-2">Servicio de impresiones gráficas y diseño</h3>
@@ -174,7 +174,7 @@
                 </div>
 
                 <div class="mbr-table-cell col-md-4">
-                    <div class="text-xs-center"><a class="btn btn-info" href="#top">VER MÁS</a></div>
+                    <div class="text-xs-center"><a class="btn btn-info" href="mktonline.html">VER MÁS</a></div>
                 </div>
             </div>
 
@@ -208,7 +208,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="Contactanos">
 
-                        <input type="hidden" value="ELa2hRswRiHFuH6QKmYZB6XtX3Np9fGMeNRegUdwPVPq/cnU5Y4K52AFbYIcMCO+bubdVdum4Mcnps5ujsO9SCLweXuJPBOUNreEPVwyi8V18g0+93zy4oRueA8axcrE" data-form-email="true">
+                        <input type="hidden" value="TEhYnup8+Cg+56N2FRrVVT/Aogv0wSUOQhaoxZs8mawyJtSoZ8LRX9VtBRuMn4grWEp+t0+AkBCey0liynxTGBQdBO4U7+ha12uXByiaiExHDUxCJaWFQNos+Px4UR/3" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
@@ -256,13 +256,13 @@
         <div class="row">
             <div class="col-md-8 col-md-offset-2 text-xs-center">
                 <h3 class="mbr-section-title display-2">Seguinos</h3>
-                <div> <a class="btn btn-social" title="Facebook" target="_blank" href="index.html"><i class="socicon socicon-facebook"></i></a>   <a class="btn btn-social" title="Instagram" target="_blank" href="index.html"><i class="socicon socicon-instagram"></i></a>      </div>
+                <div> <a class="btn btn-social" title="Facebook" target="_blank" href="https://www.facebook.com/G3GraficaCreativa/?fref=ts"><i class="socicon socicon-facebook"></i></a>   <a class="btn btn-social" title="Instagram" target="_blank" href="instagram.com/graficacreativa"><i class="socicon socicon-instagram"></i></a>      </div>
             </div>
         </div>
     </div>
 </section>
 
-<section class="mbr-section mbr-section-md-padding mbr-footer footer1" id="contacts1-8" style="background-color: rgb(0, 168, 133); padding-top: 90px; padding-bottom: 90px;">
+<section class="mbr-section mbr-section-md-padding mbr-footer footer1" id="contacts1-8" style="background-color: rgb(82, 213, 189); padding-top: 90px; padding-bottom: 90px;">
     
     <div class="container">
         <div class="row">
