--- a/mktonline.html
+++ b/mktonline.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-r" style="background-image: url(assets/images/mbr-2000x1104.jpg); padding-top: 160px; padding-bottom: 120px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Site Builder</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-r" style="background-image: url(assets/images/mbr-2000x1104.jpg); padding-top: 160px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
@@ -82,7 +82,7 @@
 
     <div class="container">
         <h3 class="mbr-section-title display-2"><span style="font-weight: normal;">Administración de redes sociales</span></h3>
-        <div class="lead"><p>Tener presencia en el ambiente físico es la parte más importante de la publicidad. Una manera eficiente y directa de hacer llegar la información de tu negocio a tu potencial cliente, ya sea informativo, persuasivo o recordatorio. Comunicar al público de tu existencia mantendrá vivo a tu negocio.</p></div>
+        <div class="lead"><p>Las <strong>redes sociales </strong>hoy en día cumple un rol importante al momento de vender un producto a un potencial cliente. La comunicación es lo más importante para un negocio. Podes tener el mejor producto del mundo, pero si no lo comunicas tu público jamás sabrá que existe. Por eso mismo nuestra empresa ofrece una solución, es decir, la administración de tus redes sociales. Optimizando tu tiempo y gastos para que puedas vender más!</p></div>
     </div>
 
 </section>
@@ -300,7 +300,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="Pensá en grande!">
 
-                        <input type="hidden" value="ONMZzNCkNtGixb+yGoL29a1E1hpZoObYOQJzonYTJ/i4G5/vK8k5cy9NwlKCk+cf6RTIKfhTCsogjVQnHf61+vq86FEITI97ABD5rVDp1ztFvG0zYCZYoAiM85c92vtX" data-form-email="true">
+                        <input type="hidden" value="kdcxVSIB4rKoU2Lw7CYxGtXMhJznEQsdY38mniHj5XBjQn3e1WRljbK4rMM+QN3YvlXbB9sVrFXC4YOl7coouTrfYyPKlAnuL8pwhqh/PKn5dUQTU0Qluc+SV3EUsqwm" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
@@ -369,7 +369,7 @@
 Email: g3graficacreativa@gmail.com<br>Teléfono: 4225 - 0008<br><br></p>
             </div>
             <div class="mbr-footer-content col-xs-12 col-md-3">
-                <p><strong>Links</strong><br><a href="index.html#testimonials1-2" class="text-success">Quienes somos</a><br><a href="index.html#msg-box3-3" class="text-success">Servicios</a><br>Marketing Online<br>Impresiones Gráficas<br><a href="index.html#form1-7" class="text-success">Contacto</a><br></p>
+                <p><strong>Links</strong><br><a href="index.html#testimonials1-2" class="text-success">Quienes somos</a><br><a href="index.html#msg-box3-3" class="text-success">Servicios</a><br><a href="mktonline.html" class="text-success">Marketing Online</a><br><a href="grafica.html" class="text-success">Impresiones Gráficas</a><br><a href="index.html#form1-7" class="text-success">Contacto</a><br></p>
             </div>
 
         </div>
