--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/"></a></li><li class="nav-item dropdown"><a class="nav-link link" href="index.html#testimonials1-2">Quienes somos</a></li><li class="nav-item"><a class="nav-link link" href="index.html#msg-box3-3">Servicios</a></li><li class="nav-item"><a class="nav-link link" href="index.html#form1-7">Contacto</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-white btn-white-outline" href="https://docs.google.com/uc?export=download&amp;id=0B3q4kB2IewgJRWFEbW15STJ1TU0">DESCARGAR LISTA DE PRECIOS</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/"></a></li><li class="nav-item dropdown"><a class="nav-link link" href="index.html#testimonials1-2">Quienes somos</a></li><li class="nav-item"><a class="nav-link link" href="index.html#msg-box3-3">Servicios</a></li><li class="nav-item"><a class="nav-link link" href="index.html#form1-7">Contacto</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header1-0" style="background-image: url(assets/images/global-business-2000x1248.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Website Creator</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header1-0" style="background-image: url(assets/images/global-business-2000x1248.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.7; background-color: rgb(0, 0, 0);"></div>
 
@@ -208,7 +208,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="Contactanos">
 
-                        <input type="hidden" value="1ad++Ycmn8R22lTbiCJ8GvANgtip9FqwmxGsJDid1OwOjT/Gpk37PKoudPIJtD97F7z8qpt/f/KHxdZIqzJE/tbIkz7Us8USCsXRGYfl8MDax4Xy1gw8T3Cn4hH4polg" data-form-email="true">
+                        <input type="hidden" value="xgi0NXu+IxJyZ3c74QoGJmEWGT5EHGUXJ8EstGa5fYQO2wRTvywqSDUju1nmjY+vWNlz6VLUh8cnMzjJoRauC9WhCEMSFGgDouc7Q273nAW5snXHSa3fSm2LSn1fkFG7" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
